[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiktok-telegram-bot"
version = "1.0.0"
description = "Telegram bot for downloading TikTok videos without watermark"
dependencies = [
    "pyTelegramBotAPI==4.14.1",
    "requests==2.31.0"
]

[project.scripts]
start-bot = "bot:start_bot"
